--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Deploy Project
 on: push
 jobs:
-  lint:
+  linta:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -15,7 +15,7 @@ jobs:
       - name: Run lint
         run: npm lint
   test:
-    needs: lint
+    needs: linta
     runs-on: ubuntu-latest
     steps:
       - name: Get code
